日志增加每日创建,更改日志显示方式

--- a/serialCom/config.ini
+++ b/serialCom/config.ini
@@ -6,12 +6,13 @@ stopbits = 1
 parity = N
 timeout = 0
 
-[log]
-fileName = log/valReader.log
+[handler]
+prepend = log
+suffix = .log
 when = midnight
 interval = 1
 backupCount = 60
 format = %(asctime)s %(levelname).1s %(name)s %(filename)s(%(lineno)d): %(message)s
 dateFormat = %Y-%m-%d %H:%M:%S
 capacity = 1
-flushLevel = ERROR
+flushLevel = INFO
